unpackaged/main/default/objects/Campaign_Details__c/Campaign_Details__c.object-meta.xml
<CustomObject>
    <description>This object contains the details of the product, technology and use case categories of the campaign</description>
    <label>Campaign Detail</label>
    <nameField>
        <displayFormat>Campaign Detail {00000}</displayFormat>
        <label>Campaign Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>