unpackaged/main/default/objects/Campaign_Details__c/fields/Campaign_Category__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Category__c</fullName>
    <label>Campaign Category</label>
    <referenceTo>Campaign_Category__c</referenceTo>
    <relationshipLabel>Campaign Details</relationshipLabel>
    <relationshipName>Campaign_Details</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>