unpackaged/main/default/objects/Campaign_Details__c/fields/Campaign_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Category_Name__c</fullName>
    <formula>Campaign_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Category Name</label>
    <type>Text</type>
</CustomField>