unpackaged/main/default/objects/Campaign_Details__c/fields/Campaign_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Category_Type__c</fullName>
    <formula>TEXT( Campaign_Category__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Category Type</label>
    <type>Text</type>
</CustomField>