unpackaged/main/default/objects/Campaign_Details__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <formula>Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign ID</label>
    <type>Text</type>
</CustomField>